# OCRBridge-monorepo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  flake.nix  mise.toml  package-lock.json  package.json  pyproject.toml
.github/: SECURITY.md
.github/scripts/: plan-releases.py
.github/workflows/: conventional-commits.yml  docker-image.yml  ocr-service.yml  python-packages.yml  release.yml
apps/ocr-service/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.combined  Dockerfile.easyocr  Dockerfile.tesseract  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  cspell.json  docker-compose.base.yml  docker-compose.combined.yml  docker-compose.easyocr.yml  docker-compose.lite.yml  docker-compose.prod.yml  docker-compose.tesseract.yml  docker-compose.yml  mise.toml  pyproject.toml  pyrightconfig.json  ruff.toml  test_param_verification.py
apps/ocr-service/.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
apps/ocr-service/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
apps/ocr-service/.github/workflows/: ci.yml  docker-image.yml  docker-publish.yml  release.yml  ruff.yml  test.yml  tests.yml
apps/ocr-service/.serena/: project.yml
apps/ocr-service/.specify/memory/: constitution.md
apps/ocr-service/app/: main.py
apps/ocr-service/specs/: schemas.py
apps/ocr-service/specs/001-ocr-hocr-upload/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
apps/ocr-service/specs/001-ocr-hocr-upload/checklists/: requirements.md
apps/ocr-service/specs/001-ocr-hocr-upload/contracts/: openapi.yaml
apps/ocr-service/specs/002-tesseract-params/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
apps/ocr-service/specs/002-tesseract-params/checklists/: requirements.md
apps/ocr-service/specs/002-tesseract-params/contracts/: openapi-extension.yaml
apps/ocr-service/specs/003-multi-engine-ocr/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
apps/ocr-service/specs/003-multi-engine-ocr/checklists/: requirements.md
apps/ocr-service/specs/003-multi-engine-ocr/contracts/: upload-ocrmac.openapi.yaml  upload-tesseract.openapi.yaml
apps/ocr-service/specs/004-easyocr-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
apps/ocr-service/specs/004-easyocr-engine/checklists/: requirements.md
apps/ocr-service/specs/004-easyocr-engine/contracts/: openapi-easyocr-extension.yaml
apps/ocr-service/specs/005-remove-generic-upload/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
apps/ocr-service/specs/005-remove-generic-upload/checklists/: requirements.md
apps/ocr-service/specs/005-remove-generic-upload/contracts/: api-changes.md
apps/ocr-service/specs/006-direct-ocr-endpoints/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
apps/ocr-service/specs/006-direct-ocr-endpoints/checklists/: requirements.md
apps/ocr-service/specs/006-direct-ocr-endpoints/contracts/: sync-easyocr-openapi.yaml  sync-ocrmac-openapi.yaml  sync-tesseract-openapi.yaml
apps/ocr-service/specs/007-ocrmac-livetext-option/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
apps/ocr-service/specs/007-ocrmac-livetext-option/checklists/: requirements.md
apps/ocr-service/specs/007-ocrmac-livetext-option/contracts/: openapi-diff.md
apps/ocr-service/src/: config.py  main.py
apps/ocr-service/src/api/: dependencies.py
apps/ocr-service/src/api/middleware/: error_handler.py  logging.py  rate_limit.py
apps/ocr-service/src/api/routes/: health.py  jobs.py  sync.py  upload.py
apps/ocr-service/src/api/routes/v2/: __init__.py  dynamic_routes.py
apps/ocr-service/src/models/: __init__.py  job.py  ocr_params.py  responses.py  result.py  upload.py
apps/ocr-service/src/services/: cleanup.py  file_handler.py  job_manager.py  ocr_processor.py
apps/ocr-service/src/services/ocr/: base.py  easyocr.py  ocrmac.py  registry.py  registry_v2.py  tesseract.py
apps/ocr-service/src/utils/: gpu.py  hocr.py  metrics.py  platform.py  security.py  validators.py
apps/ocr-service/tests/: conftest.py
apps/ocr-service/tests/contract/: test_api_contract.py  test_error_responses.py  test_result_endpoint.py  test_status_endpoint.py  test_sync_openapi.py  test_upload_endpoint.py
apps/ocr-service/tests/e2e/: test_ocr_easyocr.py  test_ocr_ocrmac.py  test_ocr_tesseract.py
apps/ocr-service/tests/integration/: test_edge_cases.py  test_expiration.py  test_lifespan.py  test_rate_limiting.py  test_status_polling.py  test_sync_endpoints.py  test_tesseract_params.py  test_upload_samples.py
apps/ocr-service/tests/integration/api/: test_health.py  test_metrics_endpoint.py
apps/ocr-service/tests/integration/api/v2/: test_discovery.py  test_dynamic_process.py
apps/ocr-service/tests/integration/services/: test_file_handler.py
apps/ocr-service/tests/mocks/: mock_engines.py  mock_entry_points.py
apps/ocr-service/tests/performance/: test_endpoint_latency.py  test_memory_usage.py
apps/ocr-service/tests/unit/: test_config.py  test_easyocr_hocr.py  test_engine_registry.py  test_hocr.py  test_job_manager.py  test_models.py  test_ocr_processor.py  test_ocrmac_engine.py  test_ocrmac_hocr.py  test_platform.py  test_security.py  test_sync_routes.py  test_sync_validation.py  test_validators.py
apps/ocr-service/tests/unit/api/: test_dependencies.py  test_dynamic_routes.py  test_dynamic_routes_v2.py  test_error_handling.py
apps/ocr-service/tests/unit/api/middleware/: test_error_handler.py  test_logging.py
apps/ocr-service/tests/unit/services/: test_cleanup.py
apps/ocr-service/tests/unit/services/ocr/: test_registry_advanced.py  test_registry_v2.py  test_registry_v2_loading.py
apps/ocr-service/tests/unit/utils/: test_hocr.py  test_metrics.py  test_platform.py  test_security.py  test_validators.py
nix/: dev-shells.nix  python-envs.nix
nix/tests/: darwin-module-eval.nix  nixos-module-eval.nix
(+3 files in other folders)
