[project]
name = "restful-ocr"
version = "1.1.0"
description = "RESTful OCR API service for document processing with HOCR output"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Martin Kleine", email = "24376955+datenzar@users.noreply.github.com"}
]
keywords = [
    "ocr",
    "hocr",
    "tesseract",
    "easyocr",
    "document-processing",
    "fastapi",
    "rest-api",
    "image-to-text",
    "pdf-ocr"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/OCRBridge/ocr-service"
Repository = "https://github.com/OCRBridge/ocr-service"
Issues = "https://github.com/OCRBridge/ocr-service/issues"
Changelog = "https://github.com/OCRBridge/ocr-service/blob/main/CHANGELOG.md"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "uvicorn[standard]>=0.24.0",
    "pytesseract>=0.3.0",
    "pdf2image>=1.16.0",
    "redis>=5.0.0",
    "slowapi>=0.1.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    # ocrmac: macOS-only (requires Apple Vision framework, unavailable in Docker)
    # Note: Docker runs Linux VM even on Mac, so ocrmac won't work in containers
    "ocrmac>=0.1.0; sys_platform == 'darwin'",
    "easyocr>=1.7.0",
    "torch>=2.0.0",
    # Pin opencv-python-headless to avoid broken 4.11.0.86 release
    # See: https://github.com/opencv/opencv-python/issues (version 4.11.0.86 has missing attributes)
    "opencv-python-headless>=4.8.0,<4.11.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
