[project]
name = "ocr-service"
version = "2.0.0"
description = "RESTful OCR API service with modular engine architecture (v2)"
readme = "README.md"
requires-python = ">=3.10"
# Base dependencies: Core API service (engines installed separately)
dependencies = [
    "fastapi>=0.123.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "uvicorn[standard]>=0.24.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.18",
    "python-magic>=0.4.27",
    "slowapi>=0.1.9",
    "ocrbridge-core>=3.1.0",
]

# Use optional-dependencies for optional features that end-users might want,
# and use dependency-groups for everything related to development, testing,
# and maintenance workflows
[project.optional-dependencies]
# Individual engines (install as needed)
# Install: pip install -e .[tesseract]
tesseract = [
    "ocrbridge-tesseract>=3.0.0",
]

# EasyOCR: Deep learning OCR with GPU support
# Install: pip install -e .[easyocr]
# Docker: Use full image (not lite)
easyocr = [
    "ocrbridge-easyocr>=3.1.0",
]

# ocrmac: macOS-only Vision framework OCR
# Install: pip install -e .[ocrmac]  (macOS only)
# Docker: Not compatible (Docker uses Linux even on Mac)
ocrmac = [
    "ocrbridge-ocrmac>=2.0.0; platform_system == 'Darwin'",
]

[dependency-groups]
# Development dependencies
# Install: uv sync --group dev
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "ty>=0.0.1a29",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "tesseract: marks tests for Tesseract engine (deselect with '-m \"not tesseract\"')",
    "easyocr: marks tests for EasyOCR engine (deselect with '-m \"not easyocr\"')",
    "ocrmac: marks tests for Ocrmac engine (deselect with '-m \"not ocrmac\"')",
]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
